Finished the index.html and style.css, adding search icon in images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- nav bar -->
     <div class="nav">
-        <div class="navleft">
+        <div class="navLeft">
             <div class="content underline pointer">
             About
             </div>
@@ -20,17 +20,19 @@
             </div>
         </div>
 
-        <div class="navright">
+        <div class="navRight">
             <div class="content underline pointer">
                 Gmail
                 </div>
                 <div class="content underline pointer">
                 Image
                 </div>
-                <span class="material-icons content pointer">
-                    apps
-                </span>
-                <img src="/images/profile.png" class ="content pointer" style="margin-bottom:0rem; width:3rem;height:3em;">
+                <div class = "darkCircleBackground">
+                    <span class="material-icons content pointer">
+                        apps
+                    </span>
+                </div>
+                <img src="/images/profile.png" class ="content pointer" style="margin-bottom:..2rem; width:3rem;height:3em;">
 
         </div>
     </div>
@@ -39,9 +41,69 @@
     <!-- body, logo, search -->
     <div class="body1">
         <img src="/images/googlelogo.png" class = "img">
+    </div>
+
+    <div class="searchContainer">
+
+        <div class="searchForm">
+
+            <!-- <div class="material-icons img">
+                search
+            </div> -->
+            <input type ="text" class = "textInput">
+            </input>
+        </div>
+    
+    </div>
+
+    <div class="buttonContainer">
+        <button type="button" class = "button pointer shadow">
+            Google Search
+        </button>
+        <button type="button" class = "button2 pointer shadow">
+            I'm Feeling Lucky
+        </button>
+    </div>
+
+
+    <!-- body, logo, search end -->
+
+    <!-- footer -->
+    <div class="body2">
 
     </div>
-    <!-- body, logo, search end -->
+
+    <div class="footerContainer">
+        <div class="footerLeft">
+            <div class = "content underline pointer">
+                Advertising
+            </div>
+
+            <div class = "content underline pointer">
+                Business
+            </div>
+            <div class = "content underline pointer">
+                How Search works
+            </div>
+        </div>
+        <!-- <div class="footerMid">
+            Carbon Neutral since 2007
+        </div> -->
+        <div class="footerRight">
+            <div class = "content underline pointer">
+                Privacy
+            </div>
+
+            <div class = "content underline pointer">
+                Terms
+            </div>
+            <div class = "content underline pointer">
+                Settings
+            </div>
+        </div>
+    </div>
+    <!-- footer end -->
+
 
 
 </body>
