--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         apps
                     </span>
                 </div>
-                <img src="/images/profile.png" class ="content pointer" style="margin-bottom:..2rem; width:3rem;height:3em;">
+                <img src="./images/profile.png" class ="content pointer" style="margin-bottom:..2rem; width:3rem;height:3em;">
 
         </div>
     </div>
@@ -40,7 +40,7 @@
 
     <!-- body, logo, search -->
     <div class="body1">
-        <img src="/images/googlelogo.png" class = "img">
+        <img src="./images/googlelogo.png" class = "img">
     </div>
 
     <div class="searchContainer">
