changed body1 in stylecss to flex direction column

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- body, logo, search -->
     <div class="body1">
-        <img src="./images/googlelogo.png" class = "img">
+        <img src="./images/googlelogo.png" class = "img" style = "width: 272px; height: 92px">
     </div>
 
     <div class="searchContainer">
